# StaffDemo

Zavod/: Zavod.sln
Zavod/Sample-Test1/: CMakeLists.txt  Sample-Test1.vcxproj  test.cpp
Zavod/Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
Zavod/Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.secondary.1.tlog
Zavod/TestsZavovd/: TestsZavovd.cpp  TestsZavovd.vcxproj  TestsZavovd.vcxproj.filters
Zavod/TestsZavovd/x64/Debug/: TestsZavovd.dll.recipe  TestsZavovd.ilk  vc143.idb
Zavod/TestsZavovd/x64/Debug/TestsZavovd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Zavod/Zavod/: Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Factory.cpp  Factory.h  Interfaces.h  Manager.cpp  Manager.h  Personal.cpp  Personal.h  Project.cpp  Project.h  Zavod.cpp  Zavod.vcxproj  Zavod.vcxproj.filters
Zavod/Zavod/data/: staff.txt
Zavod/Zavod/x64/Debug/: Zavod.exe.recipe  Zavod.ilk  vc143.idb
Zavod/Zavod/x64/Debug/Zavod.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Zavod.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Zavod/tests/: test.cpp  tests.vcxproj
Zavod/tests/x64/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+3 more)
Zavod/x64/Debug/: Sample-Test1.exe.gta.testdurations  TestsZavovd.exp  TestsZavovd.lib  full_cycle_test.txt  saved_staff.txt
